--- a/resources/form.html
+++ b/resources/form.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <h1>Suggestion Form</h1>
-    <form action="/submit-suggestion" method="post">
+    <form action="/" method="post">
       <label for="name">Name:</label><br />
       <input type="text" id="name" name="name" required /><br /><br />
 
