--- a/resources/form.html
+++ b/resources/form.html
@@ -17,6 +17,21 @@
       <label for="phone">Phone Number:</label><br />
       <input type="tel" id="phone" name="phone" required /><br /><br />
 
+      <label for="address1">Address Line 1:</label><br />
+      <input type="text" id="address1" name="address1" required /><br /><br />
+
+      <label for="address2">Address Line 2:</label><br />
+      <input type="text" id="address2" name="address2" /><br /><br />
+
+      <label for="city">City:</label><br />
+      <input type="text" id="city" name="city" required /><br /><br />
+
+      <label for="state">State:</label><br />
+      <input type="text" id="state" name="state" required /><br /><br />
+
+      <label for="zip">Zip Code:</label><br />
+      <input type="text" id="zip" name="zip" required /><br /><br />
+
       <label for="suggestions">How can we improve our service?</label><br />
       <textarea
         id="suggestions"
